Feb 10, 2010 - chris ---------------------------------------------------
                      release of hamsterdb-1.1.2

Feb 07, 2010 - chris
o Added documentation target; there's now one target for public documentation,
    one for internal and one for BFC (unittest framework) - thanks, Ger
o Finished a lot of refactoring - some from Ger, some from me

Feb 03, 2010 - chris
o Added comment in hamsterdb_int.h and hamsterdb_stats.h - these files describe
    internal interfaces! unlike hamsterdb.h they are never stable and can
    be changed with every new version.

Feb 01, 2010 - chris
o Bugfix: if multiple databases in an Environment are open, and just one 
    Database is closed, then the pages of this Database were not flushed
    correctly
o Bugfix: if multiple databases in an Environment are open, an open Transaction
    was not immediately closed on the first call of ham_close

Jan 19, 2010 - chris
o duplicate keys can now be sorted. The default sort order is based on 
    memcmp(), but can be overwritten with ham_set_duplicate_compare_func.

Jan 15, 2010 - chris
o fixed crash on Linux 64bit/gcc 4.4.1 caused by some statements which broke
    compiler optimization

Jan 14, 2010 - chris
o fixed compiler problems with g++ 4.4.x in the unittests (some header files
    were missing)

Jan 09, 2010 - chris
o bugfix in unittest - HamsterdbTest::nearFindTest fails if internal
    functions are disabled (thanks, Austin!)

Jan 06, 2010 - chris
o added safety checks to prevent reuse of a ham_db_t or ham_env_t 
	structure which is already in use (thanks, Ger!)
o the implementation of ham_create[_ex] and ham_open[_ex] was rewritten:
	both functions now create their private Environment handle. This 
	simplifies lots of code.

Dec 23, 2009 - chris ---------------------------------------------------
                      release of hamsterdb-1.1.1

Dec 19, 2009 - chris
o the flag HAM_DIRECT_ACCESS can return a pointer in hamsterdb's managed